Sorted file list for raw data

--- a/Code/Property_Prediction.ipynb
+++ b/Code/Property_Prediction.ipynb
@@ -72,7 +72,7 @@
     "folderpath = \"../Data/NIR/\"\n",
     "joined_files = os.path.join(folderpath, \"*.csv\")\n",
     "\n",
-    "joined_list = glob.glob(joined_files)\n",
+    "joined_list = sorted(glob.glob(joined_files))\n",
     "\n",
     "# combine wavenumbers in one dataframe\n",
     "dfq = pd.concat(\n",
